# TUM_LS22_Team_Project_Python

./: .gitignore  .gitlab-ci.yml  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.gitlab/merge_request_templates/: default.md
docs/: conf.py  index.rst
src/: Spracherkennung.py  __init__.py  keyword_find  main.py  spracherkennung.py  timedate.py
src/assistant/: __init__.py  audio_to_text.py  keyword_find.py  main.py  sprachausgabe.py  spracherkennung.py  timedate.py  volume.py  wetter_vorhersage.py
tests/: test_datetime  test_datetime.py  test_keyword
tests/assistant/: test_audio2text.py  test_datetime.py  test_keyword.py  test_sprachausgabe.py  test_spracherkennung.py  test_spracherkennung2  test_timedate.py  test_volume.py  test_wetter_vorhersage.py
