[metadata]
name = project
version = 0.1.0
author = Projektpraktikum Python
author_email = python@ldv.ei.tum.de
home_page = https://gitlab.ldv.ei.tum.de/python2022/project
description = A calculator for the cli.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_files = LICENSE.txt
platform = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Typing :: Typed
project_urls =
  Code = https://gitlab.ldv.ei.tum.de/python2022/project
  Issue tracker = https://gitlab.ldv.ei.tum.de/python2022/project/issues

[options]
include_package_data = true
package_dir =
    = src
packages = find_namespace:
zip_safe = false
python_requires =
    >=3.10.0
setup_requires =
    setuptools >=40.8.0
    wheel
install_requires =
    # third party libraries
    numpy==1.22.4
    stt==1.3.0
    pyautogui
    pyobjc-core;platform_system=="Darwin"
    pyobjc;platform_system=="Darwin"
    python3-Xlib;platform_system=="Linux" and python_version>="3.0"
    pyttsx3

[options.entry_points]
console_scripts =

[options.extras_require]
dev =
    darglint
    flake8
    flake8-annotations
    flake8-bugbear
    flake8-commas
    flake8-comprehensions
    flake8-docstrings
    flake8-fixme
    flake8-isort
    flake8-mutable
    flake8-print
    flake8-pyprojecttoml
    flake8-pytest-style
    flake8-quotes
    flake8-return
    flake8-simplify
    flake8-type-checking
    flake8-use-fstring
    pep8-naming
    pytest
    pytest-cov
    pytest-flake8
    pytest-mypy
    pytest-pylint
    pytest-yapf3
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
    yapf

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[sdist]
formats = gztar, zip
